# PrometheusProtocol

./: DEVELOPMENT_SETUP.md  INTRODUCTION.me  README.md  go.mod  requirements.txt
.github/workflows/: blank.yml  ci.yml
cmd/server/: main.go
dashai-browser/: BUILD.gn  CONTRIBUTING.md  README.md  build_system_updates.md  build_system_updates_adaptive_ui.md  build_system_updates_collaborative_browsing.md  build_system_updates_content_curation.md  build_system_updates_neuromorphic_modes.md  build_system_updates_quantum_compute.md  conceptual_adaptive_ui.md  conceptual_collaborative_ui.md  conceptual_content_curation_ui.md  conceptual_neuromorphic_ui.md  conceptual_quantum_ui.md  conceptual_search_ui.md  conceptual_test_scenario.md  conceptual_ui.md
dashai-browser/asol/core/: echosphere_vcpu_interface.h  prompt_feedback_client.cc  prompt_feedback_client.h  prompt_generator_client.cc  prompt_generator_client.h
dashai-browser/asol/cpp/: asol_service_impl.cc  asol_service_impl.h
dashai-browser/asol/protos/: asol_service.proto
dashai-browser/asol/tests/: mock_echosphere_vcpu.h
dashai-browser/browser_core/chrome/browser/ai_features/: adaptive_ui_service.cc  adaptive_ui_service.h  content_creation_service.cc  content_creation_service.h  search_discovery_service.cc  search_discovery_service.h  summary_service.cc  summary_service.h
dashai-browser/browser_core/services/ai_hooks/public/mojom/: adaptive_ui.mojom  collaborative_browsing.mojom  content_analysis.mojom  content_creation.mojom  content_curation.mojom  neuromorphic_modes.mojom  quantum_compute.mojom  search_discovery.mojom
dashai-browser/browser_core/tests/: adaptive_ui_integration_test.cc  collaborative_browsing_integration_test.cc  content_curation_integration_test.cc  neuromorphic_modes_integration_test.cc  quantum_compute_integration_test.cc  search_discovery_integration_test.cc
dashai-browser/docs/: architecture.md  build_system_blueprint.md  development_guide.md  distribution_strategy.md  ecosystem_integration.md  features.md  features_detailed.md  roadmap.md  security_privacy.md
docs/: DashAIBrowser_Prometheus_Integration.md  Prompt_Engineering_Spec.md
internal/feedback/: feedback.go  feedback_test.go
internal/mutator/: mutator.go  mutator_test.go
internal/optimizer/: optimizer.go  optimizer_test.go
internal/promptgen/: promptgen.go  promptgen_test.go
pkg/feedback/: feedback.go
pkg/orchestration/: orchestration.go
pkg/prompt_core/: prompt_core.go
project_doppelganger/: api.py  requirements.txt
project_doppelganger/src/: main_doppelganger.py
project_doppelganger/templates/: index.html
project_doppelganger/tests/: test_doppelganger_demo.py
prometheus_protocol/: README.md  SYSTEM_OVERVIEW.md  streamlit_app.py
prometheus_protocol/cmd/: __init__.py
prometheus_protocol/core/: ai_response.py  (+19 more)
proto/: prometheus.pb.go  prometheus.proto  prompt_messages.pb.go  prompt_messages.proto  services.pb.go  services.proto  services_grpc.pb.go
roadmap/: overall_mvp_implementation_roadmap.md
(+58 files in other folders)
